Fixining alignment of mobile view of case study section carousel.

--- a/style.css
+++ b/style.css
@@ -1045,7 +1045,12 @@ body.page-template-portfolio-page .portfolio-clients-carousel .case-logo{
     font-size: 14px;
     margin: 10px auto 6px; /* centers + keeps some bottom space */
   }
-
+.case-header .logo-container {
+display: block;       
+  margin: 0 auto;       
+  max-height: 100%;     
+  max-width: 100%;  
+}
 }
 
   @media (min-width: 1024px) {
